Plates are generated by refreshing the page instead of clicking a button.

--- a/public/ishihara/index_ishi.html
+++ b/public/ishihara/index_ishi.html
@@ -31,6 +31,6 @@
         <center>
             <canvas id="canvas">Your browser doesn't supports canvas.</canvas>
         </center>
-        <input type="file" id="image_upload" accept="image/*" style="visibility:hidden">
+        <!--input type="file" id="image_upload" accept="image/*" style="visibility:hidden"-->
     </body>
 </html>
