Change Fb metadata.

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600,800,900" rel="stylesheet" type="text/css"></link>
     <!-- You can use Open Graph tags to customize link previews.
     Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-    <meta property="og:url"           content="https://secret-citadel-79719.herokuapp.com" />
+    <meta property="og:url"           content="http://www.iseergb.com" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="ColorEyes" />
     <meta property="og:description"   content="Test your vision with ColorEyes" />
-    <meta property="og:image"         content="https://secret-citadel-79719.herokuapp.com/images/homepage-image.jpg" />
+    <meta property="og:image"         content="http://www.iseergb.com/images/homepage-image.jpg" />
   </head>
   <body>
     <noscript>
