Add twitter button.

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-
+<!--  Javascript for Facebook -->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -31,6 +31,22 @@
       js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=722847451258371";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
+<!--  Javascript for Twitter -->
+    <script>window.twttr = (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+        t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://platform.twitter.com/widgets.js";
+      fjs.parentNode.insertBefore(js, fjs);
+      t._e = [];
+      t.ready = function(f) {
+        t._e.push(f);
+      };
+      return t;
+    }(document, "script", "twitter-wjs"));</script>
+
     <div id="root"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js"></script>
