--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="ishihara/kdTree.js"></script>
     <script src="ishihara/jspolygon.js"></script>
     <script src="ishihara/ishihara.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" rel="stylesheet" />
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <!--
@@ -25,26 +26,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ColorEyes</title>
-    <!-- You can use Open Graph tags to customize link previews.
-    Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-    <meta property="og:url"           content="https://secret-citadel-79719.herokuapp.com" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="ColorEyes" />
-    <meta property="og:description"   content="Test your vision with ColorEyes" />
-    <meta property="og:image"         content="https://secret-citadel-79719.herokuapp.com/images/homepage-image.jpg" />
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=722847451258371";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
